--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </style>
 
 <body>
-    <h1> Bienvenido a mi sitio Web!</h1>
-    <h2> Proyecto de Sitio We del año - periodo</h2>
+    <h1> ¡Bienvenido a mi sitio Web!</h1>
+    <h2> Proyecto de Sitio Web del año 2023- periodo 1602</h2>
     <hr>
     <h3> Nombre: Oscar Orozco</h3>
     <h3> Programa: El programa que estudio</h3>
@@ -29,20 +29,5 @@
     </p>
 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 </html>
