--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   
   <section id="acerca-de">
     <h2>Acerca de</h2>
-    <p>Esta es la sección de Acerca de</p>
+    <p>Página exploratoria para los temas del curso Diseño de sitios web. Realizada por un estudiante de Ingenieria de Sistemas</p>
   </section>
 </body>
 <footer class="footer">
