--- a/Fase3/audio.html
+++ b/Fase3/audio.html
@@ -3,12 +3,12 @@
 <head>
   <title>Audio de Selectores CSS</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="estilos.css">
+  <link rel="stylesheet" type="text/css" href="../estilos.css">
 </head>
 <body>
     <style>
         body {
-          background-image: url("Selectors.jpg");
+          background-image: url("../Selectors.jpg");
           background-repeat: no-repeat;
           background-position: center center;
           background-size: auto;
@@ -22,7 +22,7 @@
       <div class="sidebar">
         <ul class="list-group flex-column d-inline-block first-menu">
           <li class="list-group-item py-2">
-            <a href="index.html">
+            <a href="../index.html">
               <img src="https://res.cloudinary.com/dt9b7pad3/image/upload/v1495392326/Reporting_hj9z0i.png" height="40" class="mr-4"><span>Inicio</span>
             </a>
             <ul class="list-group flex-column d-inline-block submenu svg-submenu">
@@ -80,7 +80,7 @@
   <h1>Selectores CSS</h1>
 
   <audio controls>
-    <source src="SelectoresCSS.mp3" type="audio/mpeg">
+    <source src="../SelectoresCSS.mp3" type="audio/mpeg">
     Tu navegador no soporta el elemento de audio.
   </audio>
 </div>
