--- a/Fase3/tema.html
+++ b/Fase3/tema.html
@@ -3,7 +3,7 @@
   <head>
     <title>Selectores CSS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href="../estilos.css">
 </head>
 <body>
   <header>
@@ -17,14 +17,14 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Inicio</a>
+            <a class="nav-link" href="../index.html">Inicio</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#tema-seleccionado">Tema seleccionado</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#mockup">Mockup</a>
-          </li>
+          <!-- <li class="nav-item">
+          <a class="nav-link" href="#mockup">Mockup</a>
+          </li> -->
           <li class="nav-item">
             <a class="nav-link" href="#acerca-de">Acerca de</a>
           </li>
