--- a/Fase3/audio.html
+++ b/Fase3/audio.html
@@ -83,6 +83,16 @@
     <source src="../SelectoresCSS.mp3" type="audio/mpeg">
     Tu navegador no soporta el elemento de audio.
   </audio>
+  <br>
+  <br>
+  <br>
+  <h1>CSS Grid</h1>
+  <audio controls>
+    <source src="../AudioEdgar.mp3" type="audio/mpeg">
+    Tu navegador no soporta el elemento de audio.
+  </audio>
+
+
 </div>
 </body>
 </html>
