--- a/Fase3/nosotros.html
+++ b/Fase3/nosotros.html
@@ -77,10 +77,17 @@
   <h1>Diseño de Sitios Web</h1>
   <br>
   <div class="integrantes">
-    <img src="../PerfilUnad.PNG" alt="Foto de perfil Oscar" width="20%" height="20%">
+    <img src="../PerfilUnad.PNG" alt="Foto de perfil Oscar" width="20%" height="20%" class="imagen-redonda">
     <br>
     <h3>Oscar Leonardo Orozco</h3>
     <p>Correo: olorozcop@unadvirtual.edu.co</p>
+    <p>Estudiante Ingenieria en Sistemas.</p>
+    <br>
+    <br>
+    <img src="../fotoimg1.PNG" alt="Foto de perfil Edgar" width="20%" height="20%" class="imagen-redonda">
+    <br>
+    <h3>Edgar Javier Martinez Forero</h3>
+    <p>Correo: ejmartinezfo@unadvirtual.edu.co</p>
     <p>Estudiante Ingenieria en Sistemas.</p>
   </div>
 </div>
