--- a/Fase2/index.html
+++ b/Fase2/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Selectores CSS</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="estilos.css">
+    <link rel="stylesheet" type="text/css" href="../estilos.css">
 </head>
 <body>
   <header>
@@ -27,9 +27,6 @@
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#acerca-de">Acerca de</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Fase4/index.html">Formulario</a>
           </li>
         </ul>
       </div>
@@ -63,16 +60,7 @@
                   </div>
                 </a>
               </li>
-              <li class="list-group-item">
-                <a href="Fase4/Temasfase4Grupal.html">
-                  <img src="https://res.cloudinary.com/dt9b7pad3/image/upload/v1495403294/Dashboard_kcz278.svg" height="32" width="40" class="ml-2 mr-4 d-inline-block">
-                  <div class="text d-inline-block align-middle">
-                      Temas Fase 4
-                  </div>
-                </a>
-              </li>
-
-
+              
             </ul>
           
           </li> <!-- /.list-group-item -->
